policies/constraints/no-hostnetwork.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHostNetwork
metadata:
  name: no-hostnetwork
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - monitoring
