policies/constraints/no-hostpath.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHostPath
metadata:
  name: no-hostpath
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
